--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "csv-parse": "^5.0.4",
+    "csv-parser": "^3.0.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.5"
+    "mongoose": "^6.2.5",
+    "multer": "^1.4.4"
   }
 }
